--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
-node_modules
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+
+# Environment variables
 .env
 
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm run build'
+dist/
+build/
+
+# Docker
+Dockerfile
+.dockerignore
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
+
+# Debugger settings
+.vscode/
+.idea/
+
+# Optional Coverage directory used by tools like istanbul
+coverage/
+
+# Ignore the rendered directories
+develop/public/css/
+develop/public/js/
+develop/views/partials/
