--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_NAME=blog_db
 DB_USER=postgres
 DB_PASS=postgres
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=5432
 DB_URL=postgresql://postgres:postgres@https://blog-2-2m76.onrender.com/blog_db
