--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DB_NAME=blog_db
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
+DB_PASS=postgres
+DB_HOST=127.0.0.1
 DB_PORT=5432
+DB_URL=postgresql://postgres:postgres@127.0.0.1:5432/blog_db
+
