--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_USER=postgres
 DB_PASS=postgres
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_URL=postgresql://postgres:postgres@127.0.0.1:5432/blog_db
+DB_URL=postgresql://postgres:postgres@127.0.0.1.render.com:5432/blog_db
 
