--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 DB_NAME=blog_db
 DB_USER=postgres
-DB_PASS=postgres
-DB_HOST=127.0.0.1
+DB_PASSWORD=postgres
+DB_HOST=localhost
 DB_PORT=5432
-DB_URL=postgresql://postgres:postgres@127.0.0.1.render.com:5432/blog_db
-
