--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
+DB_URL=postgresql://postgres:postgres@127.0.0.1.render.com:5432/blog_db
